feat(bookings): fix audit metadata checkin time, checkout tim, performed by account