@@ -11,6 +11,7 @@ import org.springframework.stereotype.Component;
 import java.time.*;
 import java.util.List;
 
+import static com.thang.roombooking.common.constant.SystemConstant.SYSTEM_REGION_TIMEZONE;
 import static com.thang.roombooking.common.constant.TimeConstant.CLOSING_TIME;
 import static com.thang.roombooking.common.constant.TimeConstant.OPENING_TIME;
 
@@ -22,7 +23,7 @@ public class BookingPolicyImpl implements BookingPolicy {
 
     @Override
     public void validateLeadTimePolicy(LocalDate date) {
-        if (date.isAfter(LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh")).plusDays(7))) {
+        if (date.isAfter(LocalDate.now(ZoneId.of(SYSTEM_REGION_TIMEZONE)).plusDays(7))) {
             throw new AppException(BookingErrorCode.BOOKING_DATE_OVER_LIMIT);
         }
     }
@@ -53,12 +54,12 @@ public class BookingPolicyImpl implements BookingPolicy {
     public void validateBookingTimeWorkingHours(LocalDate bookingDate, Instant bookingTime) {
         // Chỉ validate giờ làm việc nếu là đặt cho ngày hôm nay
         // Nếu đặt cho tương lai (ngày mai trở đi), bỏ qua check này
-        if (!bookingDate.equals(LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh")))) {
+        if (!bookingDate.equals(LocalDate.now(ZoneId.of(SYSTEM_REGION_TIMEZONE)))) {
             return;
         }
 
         // Chuyển Instant sang giờ Việt Nam
-        LocalTime now = LocalTime.ofInstant(bookingTime, ZoneId.of("Asia/Ho_Chi_Minh"));
+        LocalTime now = LocalTime.ofInstant(bookingTime, ZoneId.of(SYSTEM_REGION_TIMEZONE));
 
         if (now.isBefore(OPENING_TIME) || now.isAfter(CLOSING_TIME)) {
             throw new AppException(BookingErrorCode.BOOKING_OUT_OF_WORKING_HOURS,
@@ -78,7 +79,7 @@ public class BookingPolicyImpl implements BookingPolicy {
         );
 
         if (conflictingIds != null && !conflictingIds.isEmpty()) {
-            throw new AppException(BookingErrorCode.BOOKING_USER_DAILY_SLOT_CONFLICT, conflictingIds.get(0));
+            throw new AppException(BookingErrorCode.BOOKING_USER_DAILY_SLOT_CONFLICT, conflictingIds.getFirst());
         }
     }
 
